# soma

./: Cargo.toml  memory.x  rust-toolchain.toml
.cargo/: config.toml
hardware/SomaTest/: SomaTest.kicad_prl  SomaTest.kicad_pro  SomaTest.kicad_sch
src/: main.rs
