[package]
name = "soma"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "1.0.0"
defmt-rtt = "1.0.0"
panic-probe = { version = "1", features = ["print-defmt"] }

embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
cyw43-pio = { version = "0.4.0", features = ["defmt"] }
embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac","rp2040", "time-driver"] }
cyw43 = { version = "0.3.0", features = ["defmt", "bluetooth"] }
static_cell = "2.1.0"
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-net = { version = "0.7.0", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4"] }
portable-atomic = { version = "1.11.0", features = ["critical-section"] }
critical-section = { version = "1.2.0" }


[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[profile.dev]
lto = true
